--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.m7uf2_projecte2_grup_beta" >
+    package="com.example.m7uf2_projecte2_grup_beta">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA" >
-        <activity android:name=".MainActivity" >
-        </activity>
+        android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
+        <activity android:name=".MainActivity"></activity>
         <activity
-            android:name=".PaginaPricipal"
+            android:name=".EjemploBaseDeDatos"
             android:label="@string/app_name"
-            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar" >
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
