--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
         <activity android:name=".EjemploBaseDeDatos"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Vista2"></activity>
         <activity
-            android:name=".PaginaPricipal"
+            android:name=".Vista1"
             android:label="@string/app_name"
             android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar">
             <intent-filter>
