--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
-        <activity android:name=".EjemploBaseDeDatos"></activity>
-        <activity android:name=".Vista2"></activity>
+        <activity android:name=".Vista4" />
+        <activity android:name=".EjemploBaseDeDatos" />
+        <activity android:name=".Vista2" />
         <activity
             android:name=".Vista1"
             android:label="@string/app_name"
