--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".Vista4" />
         <activity android:name=".EjemploBaseDeDatos" />
         <activity android:name=".Vista2" />
+        <activity android:name=".MapsActivity" />
         <activity
             android:name=".Vista1"
             android:label="@string/app_name"
