--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
         <activity android:name=".Vista4" />
         <activity android:name=".EjemploBaseDeDatos" />
-        <activity android:name=".Vista2" />
+        <activity android:name=".Vista2"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"
+        />
         <activity
             android:name=".Vista1"
             android:label="@string/app_name"
@@ -22,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
