--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
+        <activity android:name=".Vista5"></activity>
+        <activity android:name=".Vista3" />
         <activity android:name=".Vista4" />
         <activity android:name=".EjemploBaseDeDatos" />
-        <activity android:name=".Vista2"
-            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"
-        />
+        <activity
+            android:name=".Vista2"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar" />
         <activity
             android:name=".Vista1"
             android:label="@string/app_name"
