--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.6.0')
     implementation 'com.google.firebase:firebase-firestore:22.1.1'
     implementation 'me.biubiubiu.justifytext:library:1.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
 }
