--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
-        <activity android:name=".Vista5"></activity>
-        <activity android:name=".Vista3" />
-        <activity android:name=".Vista4" />
+        <activity android:name=".Vista5"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"></activity>
+        <activity android:name=".Vista3"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"/>
+        <activity android:name=".Vista4"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"/>
         <activity android:name=".MapsActivity" />
         <activity android:name=".EjemploBaseDeDatos" />
         <activity
