--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA">
-        <activity android:name=".Vista5"
-            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"></activity>
-        <activity android:name=".Vista3"
-            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"/>
-        <activity android:name=".Vista4"
-            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar"/>
+        <activity android:name=".Vista4_1"></activity>
+        <activity
+            android:name=".Vista5"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar" />
+        <activity
+            android:name=".Vista3"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar" />
+        <activity
+            android:name=".Vista4"
+            android:theme="@style/Theme.M7UF2PROJECTE2GRUPBETA.NoActionBar" />
         <activity android:name=".MapsActivity" />
         <activity android:name=".EjemploBaseDeDatos" />
         <activity
@@ -34,9 +38,8 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-        s
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCL-HBOAWStTd1s5kXDt9BJHZtgOgSVep0" />
     </application>
 
